# Feedforward-neural-network

./: CMakeLists.txt  LICENSE  README.md
NeuralNetwork/: CMakeLists.txt  Clock.h  NeuralNetworks.cpp  NeuralNetworks.h
